--- a/crates/net/eth-wire-types/Cargo.toml
+++ b/crates/net/eth-wire-types/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 # reth
 reth-chainspec.workspace = true
 reth-codecs-derive.workspace = true
+reth-consensus.workspace = true
 reth-primitives.workspace = true
 
 # ethereum
